# lesovik

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DEPLOY.md  Makefile  README.md  ИНСТРУКЦИЯ_ПОЛЬЗОВАТЕЛЯ.md  ИНСТРУКЦИЯ_ПОЛЬЗОВАТЕЛЯ_ТЕСТ.md  ИНСТРУКЦИЯ_ТЕСТИРОВЩИКА_БЭКЕНД.md  ИНСТРУКЦИЯ_ФРОНТЕНДЕРА.md
.claude/: launch.json
.deploy/: _check_blocks.py  _check_entities.py  _check_js.py  _check_nginx.py  _check_vps_file.py  _fix_nav_order_inner.py  _fix_pages_inner.py  _fix_rels_inner.py  _fix_sozdat_zakaz_inner.py  extract_frames.py  fix_admin_pw.py  fix_admin_pw_inner.py  fix_nav_order.py  fix_pages_master.py  fix_relations_master.py  fix_sozdat_zakaz_blocks.py  gen_env.py  run_seed.py  run_seed_master.py  seed_bot_data.py  seed_pages.py  seed_vyezdnoy_master.py  ssh_run.py
.github/workflows/: ci.yml  security.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_schemas.py  0002_catalog_metamodel.py  0003_data_records.py  0004_logic_rules.py  0005_workflow.py  0006_ui.py  0007_integration.py  0008_security.py  0009_audit_log.py  0010_outbox_schema_fix.py  0011_sequences.py  0012_module_catalog.py  0013_organisations.py  0014_password_reset_token.py  0015_user_blocked.py  0016_groups.py  0017_audit_immutable.py  0018_password_policy.py  0019_session_policy.py  0020_rbac_permissions.py  0021_app_category_snapshots.py  0022_page_breakpoints_permissions.py  0023_entity_formula_currency.py  0024_rule_type.py  0025_workflow_assignee.py  0026_approval_chains.py  0027_sla_escalation.py  0028_record_cascade_deleted_by.py  0029_email_templates.py  0030_module_manifests_ru.py  0031_backfill_module_field_options.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: apps.py  audit.py  auth.py  documents.py  email_templates.py  entities.py  groups.py  health.py  integration.py  modules.py  orgs.py  records.py  roles.py  rules.py  security.py  sequences.py  templates.py  ui.py  users.py  workflow.py
backend/app/core/: antivirus.py  config.py  database.py  http_client.py  ldap_auth.py  locks.py  logging.py  metrics.py  password_policy.py  rate_limit.py  redis.py  security.py  storage.py  telemetry.py
backend/app/engine/: expressions.py  fsm.py  graph.py  interpreter.py
backend/app/models/: __init__.py  audit.py  catalog.py  communication.py  data.py  identity.py  integration.py  logic.py  metamodel.py  security.py  ui.py  workflow.py
backend/app/schemas/: apps.py  audit.py  auth.py  common.py  email_templates.py  entities.py  groups.py  integration.py  modules.py  orgs.py  records.py  rules.py  security.py  ui.py  users.py  workflow.py
backend/app/seeds/: run.py
backend/app/services/: apps.py  audit.py  auth.py  email.py  email_templates.py  entities.py  exports.py  files.py  groups.py  imports.py  integration.py  modules.py  orgs.py  password_policy.py  records.py  roles.py  rules.py  security.py  sequences.py  session_policy.py  templates.py  ui.py  users.py  workflow.py
backend/app/worker/: celery_app.py
backend/app/worker/tasks/: exports.py  integration.py  notifications.py  sandbox.py  workflow.py
backend/scripts/: run_tests.sh
backend/tests/: conftest.py  factories.py  test_apps.py  test_audit_api.py  test_auth.py  test_debug_apps.py  test_exports.py  test_health.py  test_imports.py  test_integration.py  test_modules.py  test_records.py  test_rule_wiring.py  test_rules.py  test_security.py  test_sequences.py  test_templates_modules.py  test_ui.py  test_users.py  test_workflow.py  test_workflow_cancel.py
docs/: API_CONTRACT.md  DATABASE_SCHEMA.md  FIGMA_QUESTIONS.md  RULES_AND_WORKFLOW.md  client-presentation.html  figma-viewer.html
frontend/: .env.mock  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.editor.config.ts  vite.runtime.config.ts
frontend/src/: index.css  vite-env.d.ts
frontend/src/components/: ImportModal.tsx
frontend/src/editor/: EditorApp.tsx  index.html  main.tsx
infra/: .env.example  docker-compose.prod.yml  docker-compose.server.yml  docker-compose.test.yml  docker-compose.yml  run-tests.sh
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
(+106 files in other folders)
