[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nocode-platform-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "gunicorn==23.0.0",
    "httpx==0.27.2",

    # Data / ORM
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",

    # Validation
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "email-validator==2.2.0",

    # Auth
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==3.2.2",            # passlib 1.7.4 detect_wrap_bug uses >72-byte test, breaks bcrypt>=4
    "python-multipart==0.0.17",

    # Task queue
    "celery[redis]==5.4.0",
    "redis==5.2.1",
    "kombu==5.4.2",

    # Storage
    "boto3==1.35.82",

    # Templating / email
    "jinja2==3.1.4",
    "aiosmtplib==3.0.2",

    # Observability
    "structlog==24.4.0",
    "opentelemetry-api==1.29.0",
    "opentelemetry-sdk==1.29.0",
    "opentelemetry-instrumentation-fastapi==0.50b0",
    "opentelemetry-instrumentation-sqlalchemy==0.50b0",
    "opentelemetry-exporter-otlp==1.29.0",
    "prometheus-client==0.21.1",

    # Rate limiting
    "slowapi==0.1.9",

    # OTP / 2FA
    "pyotp==2.9.0",

    # LDAP
    "ldap3==2.9.1",

    # Utilities
    "python-slugify==8.0.4",
    "orjson==3.10.12",
    "ulid-py==1.1.0",
]

[project.optional-dependencies]
# Minimal set to RUN the test suite. Excludes semgrep/ruff/mypy/bandit on
# purpose: semgrep pins opentelemetry-api~=1.25 which conflicts with the app's
# pinned 1.29, making `.[dev]` unresolvable. Used by the dockerized test stack.
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "factory-boy==3.3.1",
    "faker==33.1.0",
    "httpx==0.27.2",
    "anyio==4.7.0",
    "pytest-postgresql==6.1.1",
]
dev = [
    # Testing
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "factory-boy==3.3.1",
    "faker==33.1.0",
    "httpx==0.27.2",
    "anyio==4.7.0",

    # Test DB
    "pytest-postgresql==6.1.1",

    # Lint / format
    "ruff==0.8.4",
    "mypy==1.13.0",
    "types-redis==4.6.0.20241004",
    "types-passlib==1.7.7.20240819",
    "types-python-jose==3.3.4.20240106",

    # Security
    "bandit[toml]==1.8.0",
    "pip-audit==2.7.3",
    "semgrep==1.101.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "SIM",      # flake8-simplify
    "TCH",      # flake8-type-checking
    "RUF",      # ruff-specific
    "S",        # bandit (security)
    "A",        # flake8-builtins
    "ANN",      # flake8-annotations
]
ignore = [
    "ANN101",  # missing type for self
    "ANN102",  # missing type for cls
    "S101",    # allow assert in tests
    "B008",    # FastAPI Depends() in default args
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ANN"]
"alembic/**" = ["ANN", "N999"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = ["celery.*", "kombu.*", "boto3.*", "jose.*", "passlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Each test gets its own loop; async fixtures share that test's loop so the
# function-scoped DB engine/pool stays on a single, live event loop.
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "integration: mark test as integration (requires DB/Redis)",
    "unit: mark test as unit (no external services)",
    "slow: mark test as slow",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/seeds/*", "alembic/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.bandit]
exclude_dirs = ["tests", "alembic"]
skips = ["B101"]
